# openmind

./: CMakeLists.txt
omnn/extrapolator/: CMakeLists.txt  Extrapolator.h  Number.h
omnn/extrapolator/test/: test_extrapolator.cpp
omnn/math/test/: Sum_test.cpp
